@@ -20,6 +20,7 @@ Date: ???
     - Hid Electric mining drill and pumpjack
     - Hid Mining Productivity techs (unless Seablock Mining mod is enabled)
     - Added Slag Processing 1 as a prerequisite for Logistics (if Bob's logistics setting Transport belt overhaul is enabled)
+    - Removed unnecessary prerequisites
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.0
 Date: 16.12.2020
